--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav>
                     <a href="#">Inicio</a>
                     <a href="#">Servicios</a>
-                    <a href="#">Projectos</a>
+                    <a href="#">Proyectos</a>
                     <a href="#">Contactos</a>
                 </nav>
             </div>
